# prompt-optim-model

./: .gitignore  Qwen2.5-1.5B-train.py  Qwen2.5-7B-train.py  README.md  evaluate.py  generate_data.py  inference.py  manual_evaluation_guide.md  merge_clean_data.py  pyproject.toml  quick_test.py  start_generate_workers.ps1  train_pipeline.ps1  training_evaluation_report.md
prompt/: data_generation_system_prompt.txt  evaluation_followup_assistant.txt  evaluation_system_prompt.txt  inference_system_prompt.txt
scripts/data/: generate_data.py  merge_clean_data.py  start_generate_workers.ps1
src/: prompt_loader.py
src/data_pipeline/: __init__.py  core.py  generate.py  merge.py
